complete header-ui

--- a/nougat/src/index.css
+++ b/nougat/src/index.css
@@ -131,6 +131,10 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
+/* 
+body {
+  background: #fcefee !important;
+} */
 
 .cart-plus-icon:hover {
   color: blue;
