--- a/nougat/src/index.css
+++ b/nougat/src/index.css
@@ -131,8 +131,8 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
-/* 
-body {
+
+/* body {
   background: #fcefee !important;
 } */
 
