added login alert and fix logout bug

--- a/nougat/src/index.css
+++ b/nougat/src/index.css
@@ -112,6 +112,11 @@ html {
 body {
   line-height: 1;
 }
+
+body * {
+  font-family: "Noto Sans TC", sans-serif;
+}
+
 ol,
 ul {
   list-style: none;
